test/tests/stages/18_structures/invalid_types/initializers/non_constant_static_init.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[27]:
  struct
  identifier(pair)
  {
  int
  identifier(a)
  ;
  int
  identifier(b)
  ;
  }
  ;
  struct
  identifier(pair)
  identifier(x)
  =
  {
  const int(1)
  ,
  const int(2)
  }
  ;
  struct
  identifier(pair)
  identifier(y)
  =
  identifier(x)
  ;
